# curs2-test

./: CMakeLists.txt
source/: main.cpp
